# sparetheair

./: .gitignore  .travis.yml  Makefile  README.md  arduino_secrets.h  code.py  main.cc  main.ino  sparetheair.cpp  sparetheair.h  sparetheair.ino
images/: convert.py
lib/: lib.ino  makevar.py  sparetheair.cpp  sparetheair.h
sparetheair/: aqi_meter_image.h  display.cpp  display.h  font_base.h  font_large.h  font_medium.h  logo.h  network.cpp  network.h  parser.cpp  parser.h  size.h  sparetheair.ino  status.cpp  status.h  unit_tests.ino
sparetheair/unit_tests/: CMakeLists.txt  CMakeLists.txt.in  main.cc  rebuild.sh
sparetheair/unit_tests/mock_arduino/: Adafruit_EPD.cpp  Arduino.h  Arduino_String.cpp  Arduino_String.h  HTTPClient.cpp  HTTPClient.h  Print.h  SPI.h  String.cpp  String.h  WProgram.h
sparetheair/unit_tests/test_data/: forecast.xml  region_data.txt  today.xml
